@@ -95,6 +95,10 @@ run_llvm_config(LLVM_VERSION_FULL --version)
 string(REGEX REPLACE "([0-9]+)\\.([0-9]+).*" "\\1.\\2" LLVM_VERSION "${LLVM_VERSION_FULL}")
 message(STATUS "LLVM_VERSION: ${LLVM_VERSION}")
 
+string(REPLACE "." ";" LLVM_VERSION_PARSED "${LLVM_VERSION}")
+list(GET LLVM_VERSION_PARSED 0 LLVM_VERSION_MAJOR)
+list(GET LLVM_VERSION_PARSED 1 LLVM_VERSION_MINOR)
+
 run_llvm_config(LLVM_CFLAGS --cflags)
 string(REPLACE "${LLVM_PREFIX}" "${LLVM_PREFIX_CMAKE}" LLVM_CFLAGS "${LLVM_CFLAGS}")
 run_llvm_config(LLVM_CXXFLAGS --cxxflags)
