@@ -43,6 +43,7 @@ Notable Bug Fixes
 - Fix LLVM loop vectorizing remarks printing (POCL_VECTORIZER_REMARKS=1).
 - Fix an issue in which the loop vectorizer produced code with invalid
   memory reads (issue #757).
+- Fix compilation error when CMake option SINGLE_LLVM_LIB=OFF.
 
 Security
 --------
